Fix the font size in search for mobile, spacing

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -1126,6 +1126,7 @@ p {
 }
 
 @media (max-width: 576px) {
+  
   .ant-select-selector{
     /* border-radius: 12px !important; */
     border-top-right-radius: 12px !important;
@@ -1200,7 +1201,7 @@ p {
   .ant-select-selection-search-input {
     width: 100% !important;
     height: 52px !important;
-    font-size: 10px;
+    font-size: 14px;
     border: none !important;
   }
 
